[gd_scene load_steps=12 format=3 uid="uid://hr5vqjmaxufh"]

[ext_resource type="Texture2D" uid="uid://b55awmvm486r7" path="res://Assets/Backgrounds/background.png" id="1_qu3qb"]
[ext_resource type="Script" path="res://Scripts/SceneScripts/main_menu.gd" id="1_swndj"]
[ext_resource type="Texture2D" uid="uid://vik8d4f6y0pj" path="res://Assets/Titlecard.png" id="2_68fvs"]
[ext_resource type="PackedScene" uid="uid://ctear2ynk1rtb" path="res://Scenes/cutscene.tscn" id="2_vncc3"]
[ext_resource type="FontFile" uid="uid://d38vnjqlmdaru" path="res://Assets/Fonts/m3x6.ttf" id="3_om0ys"]
[ext_resource type="AudioStream" uid="uid://djclkbvpk3ej3" path="res://Assets/Sound Effects/click.wav" id="6_4fu0n"]
[ext_resource type="AudioStream" uid="uid://y404pu2ghfid" path="res://Assets/Music/PerituneMaterial_Gothic_Cute_inst.mp3" id="7_yt3tf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_v7ba1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_inpbh"]
bg_color = Color(0.258824, 0.141176, 0.270588, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4rxsx"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k8j4d"]
bg_color = Color(0.12549, 0.2, 0.309804, 1)
corner_detail = 20

[node name="main_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_swndj")
first_scene = ExtResource("2_vncc3")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_qu3qb")

[node name="TextureRect2" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 81.0
offset_top = 117.0
offset_right = 835.0
offset_bottom = 516.0
texture = ExtResource("2_68fvs")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -255.0
offset_top = 200.0
offset_right = -136.0
offset_bottom = 281.0
grow_horizontal = 0
grow_vertical = 2
scale = Vector2(2, 2)
theme_override_constants/separation = 5

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_om0ys")
theme_override_font_sizes/font_size = 48
theme_override_styles/normal = SubResource("StyleBoxEmpty_v7ba1")
theme_override_styles/hover = SubResource("StyleBoxFlat_inpbh")
text = "Start"

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_om0ys")
theme_override_font_sizes/font_size = 48
theme_override_styles/normal = SubResource("StyleBoxEmpty_4rxsx")
theme_override_styles/hover = SubResource("StyleBoxFlat_k8j4d")
text = "Quit"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_4fu0n")
volume_db = 5.0

[node name="GothicCute" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_yt3tf")
volume_db = -25.0
autoplay = true

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
